# Deep_C_HW

./: Makefile  readme.md
.github/workflows/: ci.yml  ci_hw2.yml
HW1/: main.c
HW2/: CMakeLists.txt  Makefile  cmk  main.c  multi  multi.c  readme.md  sample.c  script  time.txt  train  train.c
HW2/dynamic_lib/: CMakeLists.txt  dist_parallel.c  dist_parallel.h
HW2/linter/: run.sh
HW2/static_lib/: CMakeLists.txt  dist_no_parallel.c  dist_no_parallel.h
HW2/tests/: CMakeLists.txt  test_libs.cpp
funcs/animal/: animal.c  animal.h
funcs/constants/: constants.h
funcs/safe_input/: safe_input.c  safe_input.h
tests/: test_funcs.cpp
